# zhong-et-al-2025

./: .gitignore  README.md  drive-sync.json  graph.py  pyproject.toml
.githooks/: post-commit
Backups/legacy-development-tools-2026-07-18/drive_snapshot/: drive.py  graph.py  plot.py  pyproject.toml  sql.py
Backups/legacy-development-tools-2026-07-18/drive_snapshot/notebooks/: 01_dataset_atlas_and_graph_tutorials.ipynb  02_released_example_dprime_walkthrough.ipynb  03_sql_dataset_selection_for_dprime.ipynb  04_joined_data_and_dprime_workspace.ipynb
Backups/legacy-development-tools-2026-07-18/drive_snapshot/notebooks/archived/: 00_use_janelia_drive_colab.ipynb  04_paper_companion_colab.ipynb  05_reward_dprime_dynamics_colab.ipynb  06_within_session_dprime_colab.ipynb  07_complete_mouse_journeys_colab.ipynb  08_plotting_gallery_colab.ipynb  10_dprime_pandas_colab.ipynb  11_join_neural_behavior_retinotopy_colab.ipynb  12_complete_dataset_inspector_colab.ipynb
Backups/legacy-development-tools-2026-07-18/drive_snapshot/original/: README.md
Backups/legacy-development-tools-2026-07-18/drive_snapshot/scripts/: build_atlas_assets.py  create_data_access_notebook.py  create_paper_companion_notebook.py  create_plotting_gallery_notebook.py  create_reward_dprime_dynamics_notebook.py  create_sql_dprime_notebook.py  create_team_walkthrough_notebook.py
Backups/legacy-development-tools-2026-07-18/drive_snapshot/tests/: test_data_access_notebook.py  test_drive.py  test_graph.py  test_paper_companion_notebook.py  test_plot.py  test_plotting_gallery_notebook.py  test_team_walkthrough_notebook.py  test_wheel_distribution.py
Backups/legacy-development-tools-2026-07-18/drive_snapshot/zhong2025/: __init__.py  data.py  demo.py  learning.py  plot.py  position.py
Backups/legacy-development-tools-2026-07-18/drive_snapshot/zhong2025/assets/: tx119_atlas_demo.npz
cloudflare/: prepare.mjs  wrangler.jsonc
code/: arrays.py  database.py  dataframe_sql.py  dprime.py  drive.py  graph.py  joiner.py  position.py  pyproject.toml  release.py  sql.py  warehouse.py
code/data_access/: __init__.py  catalog.py
code/dprime/: __init__.py  evaluation.py  inference.py  trials.py
code/graph/: __init__.py  context.py  diagram.py  display.py  execution.py  types.py  widget.py
code/metadata/: imaging-experiment-index.json
code/zhong/: S6.py  data_process_script.ipynb  fig1.py  utils.py
notebooks/: 01_dataset_atlas_and_graph_tutorials.ipynb  02_released_example_dprime_walkthrough.ipynb  03_sql_dataset_selection_for_dprime.ipynb  04_joined_data_and_dprime_workspace.ipynb  05_neuromatch_visual_learning_project.ipynb  06_join_neural_behavior_retinotopy.ipynb  zhong2025_data_atlas_colab.ipynb  zhong2025_graph_experiments_colab.ipynb
original/: fig2.py  fig3.py  fig4.py  fig5.py
references/: canonical_map.html  canonical_map.md
scripts/: build_atlas_demo.py  create_data_atlas_notebook.py  drive_sync.py
tests/: test_atlas.py  test_data.py  test_data_atlas_notebook.py  test_drive_sync.py  test_graph.py  (+3 more)
(+58 files in other folders)
