[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "zhong2025"
version = "0.1.0"
description = "Colab data atlas and safe catalog for Zhong et al. (2025)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-only"}
dependencies = [
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<3",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
rebuild = [
  "scikit-learn==1.6.0",
]
dev = [
  "ipykernel>=6.29,<7",
  "nbclient>=0.10,<1",
  "nbformat>=5.10,<6",
  "pytest>=8,<9",
]

[tool.setuptools.packages.find]
include = ["zhong2025*"]

[tool.setuptools.package-data]
"zhong2025.assets" = ["*.json", "*.npz"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
