[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "zhongdb"
version = "0.2.0"
description = "Pandas and DuckDB access to the Zhong et al. (2025) dataset"
readme = {text = "ZhongDB data access for Zhong et al. (2025).", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}
dependencies = [
  "duckdb>=1.4,<2",
  "ipywidgets>=8.1,<9",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
]

[project.optional-dependencies]
rebuild = [
  "scikit-learn==1.6.0",
]
dev = [
  "ipykernel>=6.29,<7",
  "nbclient>=0.10,<1",
  "nbformat>=5.10,<6",
  "pytest>=8,<9",
  "mypy>=1.11",
  "pandas-stubs>=2.3.3",
]

[tool.setuptools]
py-modules = ["database", "dprime", "drive", "graph", "position", "sql"]

[tool.setuptools.packages.find]
include = ["metadata"]

[tool.setuptools.package-data]
metadata = ["*.json"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
files = ["database.py", "dprime.py", "drive.py", "graph.py", "position.py", "sql.py"]
ignore_missing_imports = true
