[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "zhong2025"
version = "0.1.4"
description = "Colab data access, atlas, and notebook graph for Zhong et al. (2025)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-only"}
dependencies = [
  "duckdb>=1.4,<2",
  "ipywidgets>=8.1,<9",
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "requests>=2.31,<3",
  "scipy>=1.12,<2",
]

[project.optional-dependencies]
rebuild = [
  "scikit-learn==1.6.0",
]
dev = [
  "ipykernel>=6.29,<7",
  "nbclient>=0.10,<1",
  "nbformat>=5.10,<6",
  "pytest>=8,<9",
]

[tool.setuptools]
py-modules = ["drive", "graph", "plot", "sql"]

[tool.setuptools.packages.find]
include = ["zhong2025*"]

[tool.setuptools.package-data]
"zhong2025.assets" = [
  "*.json",
  "*.npz",
  "reference_figures/*.jpg",
  "reference_figures/*.png",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
